--- a/finalModule/finalModule/src/main/resources/templates/login.html
+++ b/finalModule/finalModule/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="logo-container">
-  <img th:src="@{/images/logo/logo.png}" alt="Electronics Store Logo" class="logo">
+  <img th:src="@{/images/logo/logo.png}" alt="Logo">
 </div>
 
 <div class="scroll-down">Kéo xuống để đăng nhập
@@ -45,7 +45,7 @@
       </form>
     </div>
     <div class="modal-right">
-      <img th:src="@{/images/logo/logo.png}" alt="Electronics Store Logo">
+      <img th:src="@{/images/logo/logo.png}" alt="Logo">
     </div>
   </div>
   <button class="modal-button">Đăng nhập</button>
