--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -390,6 +390,7 @@
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
 <script th:src="@{/js/admin/listEmployee.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script>
     /**
      * @author Sinhph
