--- a/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/layout/layout.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" th:href="@{css/admin/fragments/header.css}">
   <link rel="stylesheet" th:href="@{css/admin/fragments/footer.css}">
   <link rel="stylesheet" th:href="@{css/admin/layout/layout.css}">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -20,6 +21,7 @@
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script th:fragment="sidebarScript" >
   // Toggle sidebar
   document.getElementById('sidebar-toggle').addEventListener('click', () => {
