--- a/finalModule/finalModule/src/main/resources/templates/admin/sales/sales_report.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/sales/sales_report.html
@@ -109,6 +109,7 @@
 <!-- JavaScript -->
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
