--- a/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/warehouse/warehouse-table.html
@@ -243,7 +243,6 @@
                 </tbody>
             </table>
         </div>
-
         <!-- Pagination Section -->
         <nav aria-label="Page navigation" class="mt-4">
             <ul class="pagination justify-content-end">
@@ -295,6 +294,7 @@
 <div th:replace="~{admin/fragments/footer :: footer}"></div>
 <script th:src="@{/js/admin/layout.js}"></script>
 <script th:src="@{/js/admin/header.js}" type="text/javascript"></script>
+<script th:src="@{/js/admin/sidebarActiveMenu.js}" defer></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script th:fragment="sidebarScript">
     // Toggle sidebar
