--- a/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/fragments/sidebar.html
@@ -34,7 +34,7 @@
         </a>
         <ul class="treeview-menu">
           <li><a th:href="@{/Admin/report}"><i class="fa-solid fa-users"></i>Báo cáo khách hàng</a></li>
-          <li><a th:href="@{/sales/report}"><i class="fas fa-coins"></i>Báo cáo doanh thu</a></li>
+          <li><a href="/Admin/statistical?type=day"><i class="fas fa-coins"></i>Báo cáo doanh thu</a></li>
         </ul>
       </li>
 
