--- a/finalModule/finalModule/src/main/resources/templates/admin/statistical/order-detail.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/statistical/order-detail.html
@@ -35,7 +35,7 @@
         <div class="col-md-3">
             <div class="summary-card bg-transparent">
                 <h6 class="text-black">Tổng đơn hàng</h6>
-                <p class="fw-bold text-primary" th:text="${orders.content.size()}"></p>
+                <p class="fw-bold text-primary" th:text="${ordersSize}"></p>
             </div>
         </div>
     </div>
