--- a/finalModule/finalModule/src/main/resources/templates/admin/statistical/products-detail.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/statistical/products-detail.html
@@ -34,7 +34,7 @@
         <div class="col-md-3">
             <div class="summary-card bg-transparent">
                 <h6 class="text-black">Tổng sản phẩm</h6>
-                <p class="fw-bold text-primary" th:text="${products.content.size()}"></p>
+                <p class="fw-bold text-primary" th:text="${totalStockProducts}"></p>
             </div>
         </div>
         <div class="col-md-3">
