--- a/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/employee/listEmployee.html
@@ -50,7 +50,7 @@
 </head>
 <body>
 <div th:replace="~{admin/fragments/header :: header}"></div>
-<div th:replace="~{admin/employee/sidebar :: sidebar}"></div>
+<div th:replace="~{admin/fragments/sidebar :: sidebar}"></div>
 <main class="main-content" th:fragment="content">
     <div class="wrapper col-md-9 container mt-4">
         <h1 class="tittle mb-4">Quản Lý Nhân Viên</h1>
