--- a/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listCategory.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/product_brand_category/listCategory.html
@@ -165,15 +165,17 @@
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body">
-                    <form id="editCategoryForm" th:action="@{/Admin/category-manager/edit}" method="post">
-                        <input type="hidden" id="editCategoryId" name="categoryID">
+                    <form id="editCategoryForm" th:action="@{/Admin/category-manager/edit}" method="post" th:object="${categorys}">
+                        <input type="hidden" id="editCategoryId" name="categoryID" th:field="*{categoryID}">
                         <div class="mb-3">
                             <label class="form-label">Tên Danh Mục</label>
-                            <input type="text" class="form-control" id="editCategoryName" name="name" required>
+                            <input type="text" class="form-control" id="editCategoryName" th:field="*{name}" required>
+                            <p th:if="${#fields.hasErrors('name')}" th:errors="*{name}" style="color: red"></p>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Mô Tả</label>
-                            <textarea class="form-control" id="editCategoryDescription" name="description" required></textarea>
+                            <textarea class="form-control" id="editCategoryDescription" th:field="*{description}" required></textarea>
+                            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" style="color: red"></p>
                         </div>
                         <div class="text-end mt-4">
                             <button type="button" class="btn btn-secondary me-2" data-bs-dismiss="modal">Hủy</button>
