--- a/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
+++ b/finalModule/finalModule/src/main/resources/static/css/admin/layout/layout.css
@@ -1,12 +1,13 @@
 .main-content {
     margin-left: 100px;
     margin-top: 80px;
-    margin-bottom: 50px;
-    padding: 10px;
+    padding: 20px;
     min-height: calc(100vh - 110px);
     transition: margin-left 0.1s ease;
     background-color:#E4E7ED;
+    padding-bottom: 80px;
 }
+
 .wrapper{
     background-color: #ffffff;
     padding: 20px;
