--- a/finalModule/finalModule/src/main/resources/templates/admin/statistical/order-detail.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/statistical/order-detail.html
@@ -53,7 +53,7 @@
                 <div class="card text-center">
                     <div class="card-body">
                         <h6 class="card-title">Tổng đơn hàng</h6>
-                        <p class="card-text text-primary fw-bold" th:text="${orders.content.size()}"></p>
+                        <p class="card-text text-primary fw-bold" th:text="${ordersSize}"></p>
                     </div>
                 </div>
             </div>
