--- a/finalModule/finalModule/src/main/resources/templates/admin/statistical/revenue-detail.html
+++ b/finalModule/finalModule/src/main/resources/templates/admin/statistical/revenue-detail.html
@@ -124,7 +124,7 @@
         <!-- Pagination -->
         <div class="d-flex justify-content-between align-items-center mt-4">
             <div></div> <!-- Placeholder to maintain layout -->
-            <nav aria-label="Page navigation" th:if="${revenues.totalPages > 1}">
+            <nav aria-label="Page navigation" >
                 <ul class="pagination m-0">
                     <!-- First page button -->
                     <li class="page-item" th:classappend="${page == 1} ? 'disabled'">
